<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.RegisterActivity">

    <ImageView
        android:id="@+id/imgCinema"
        android:layout_width="176dp"
        android:layout_height="92dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cinema" />

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="192dp"
        android:layout_marginTop="20dp"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgCinema" />

<!--    username-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayoutCreateUsername"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="351dp"
        android:layout_height="87dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/username"
        app:hintTextColor="@color/white"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:counterTextColor="@color/gray"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_baseline_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtInputEditTextCreateUsername"
            android:background="@color/gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="20" />
    </com.google.android.material.textfield.TextInputLayout>

<!--    password-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayoutCreatePassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="349dp"
        android:layout_height="87dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="235dp"
        android:layout_marginEnd="19dp"
        android:hint="@string/password"
        app:hintTextColor="@color/white"
        app:counterEnabled="true"
        app:counterTextColor="@color/gray"
        app:counterMaxLength="20"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_baseline_lock_24">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txtInputEditTextCreatePassword"
        android:background="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="20" />
    </com.google.android.material.textfield.TextInputLayout>

<!--    confirm-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayoutConfirmPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="349dp"
        android:layout_height="87dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="325dp"
        android:layout_marginEnd="19dp"
        android:hint="@string/confirm"
        app:hintTextColor="@color/white"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:counterTextColor="@color/gray"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_baseline_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtInputEditTextConfirmPassword"
            android:background="@color/gray"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="20" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="348dp"
        android:layout_height="53dp"
        android:layout_marginStart="30dp"
        android:backgroundTint="@color/pink"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInputLayoutConfirmPassword" />

    <ImageButton
        android:id="@+id/imgbtnBackToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />
</androidx.constraintlayout.widget.ConstraintLayout>